--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,10 @@ dependencies:
   cupertino_icons: ^1.0.2
   english_words: ^4.0.0
   flutter_vlc_player: ^7.1.2
+  chewie: ^1.3.2
+
+  # play audio
+  audioplayers: ^0.20.1
 
 dev_dependencies:
   flutter_test:
